Fix close btn not showing

--- a/assets/main.css
+++ b/assets/main.css
@@ -129,8 +129,8 @@
   display: block !important;
 }
 .js-injector-logs {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
   padding: 0.5rem;
   background: #000;
